Cleaning up deps and patching in datafy support.